# cursor-clip

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README_NEW.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: docker.yml  release.yml  rust-clippy.yml
backend/: backend.rs  backend_registry.rs
docs/: global-list.txt
frontend/: buffer.rs  gtk_overlay.rs  mod.rs
frontend/dispatch/: mod.rs  pointer.rs  registry.rs  shm.rs  viewporter.rs
src/: backend.rs  backend_complex.rs.bak  backend_simple.rs.bak  buffer.rs  frontend.rs  gtk_overlay.rs  gtk_overlay_new.rs  gtk_overlay_old.rs  ipc.rs  main.rs  state.rs  sync_client.rs  ui.rs
src/backend/: backend.rs  backend_logic.rs  backend_state.rs  ext_data_control.rs  ipc_server.rs  mod.rs  persistence.rs  virtual_keyboard.rs  wayland_clipboard.rs
src/dispatch/: backend_registry.rs  compositor.rs  frame_callback.rs  layer_shell.rs  mod.rs  pointer.rs  registry.rs  shm.rs  viewporter.rs  virtual_pointer.rs  xdg_shell.rs
src/frontend/: buffer.rs  client.rs  frontend.rs  frontend_client.rs  frontend_logic.rs  frontend_state.rs  gtk_overlay.rs  initializer.rs  ipc_client.rs  mod.rs  sync_client.rs
src/frontend/dispatch/: compositor.rs  empty_dispatch.rs  frame_callback.rs  layer_shell.rs  mod.rs  pointer.rs  registry.rs  shm.rs  viewporter.rs  virtual_pointer.rs  xdg_shell.rs
src/shared/: data_structures.rs  mod.rs  wayland_connection.rs
