[package]
name = "cursor-clip"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cursor-clip"
path = "src/main.rs"

[dependencies]
wayland-client = "0.31.10"
wayland-protocols = { version = "0.32.8", features = ["client","staging"] }
wayland-protocols-wlr = { version = "0.3.8", features = ["client"] }
gtk4 = "0.9"
gtk4-layer-shell = "0.5.0"
libadwaita = "0.7"
gio = "0.20"
memmap2 = "0.9.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
#smithay-client-toolkit = "0.19.2"
#nix = { version = "0.26.0"}