[package]
name = "cursor-clip"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cursor-clip"
path = "src/main.rs"

[dependencies]
wayland-client = "0.31.10"
wayland-protocols = { version = "0.32.8", features = ["client","staging"] }
wayland-protocols-wlr = { version = "0.3.8", features = ["client"] }
gtk4 = "0.9"
gtk4-layer-shell = "0.5.0"
libadwaita = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
indexmap = { version = "2.11", features = ["serde"] }
# Logging
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }